--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ CMakeFiles/
 CMakeCache.txt
 cmake_install.cmake
 Makefile
+.env
 
 # Created by https://www.toptal.com/developers/gitignore/api/c++,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=c++,visualstudiocode
